--- a/package.json
+++ b/package.json
@@ -26,19 +26,23 @@
   "@react-aria/ssr": "3.9.7",
   "@react-aria/visually-hidden": "3.8.19",
   "clsx": "2.1.1",
+  "file-saver": "^2.0.5",
   "framer-motion": "11.13.1",
   "intl-messageformat": "^10.5.0",
   "lucide-react": "^0.477.0",
   "next": "15.0.4",
   "next-themes": "^0.4.4",
   "ol": "^10.4.0",
+  "qrcode": "^1.5.4",
   "react": "18.3.1",
   "react-dom": "18.3.1"
  },
  "devDependencies": {
   "@next/eslint-plugin-next": "15.0.4",
   "@react-types/shared": "3.25.0",
+  "@types/file-saver": "^2.0.7",
   "@types/node": "20.5.7",
+  "@types/qrcode": "^1.5.5",
   "@types/react": "18.3.3",
   "@types/react-dom": "18.3.0",
   "@typescript-eslint/eslint-plugin": "8.11.0",
