Ngrok Implementation Phone - Routing needs bug fixing in some locations

--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
   "@typescript-eslint/eslint-plugin": "8.11.0",
   "@typescript-eslint/parser": "8.11.0",
   "autoprefixer": "10.4.19",
-  "electron": "^35.0.0",
+  "electron": "^35.1.5",
+  "electron-builder": "^26.0.12",
   "eslint": "^8.57.0",
   "eslint-config-next": "15.0.4",
   "eslint-config-prettier": "9.1.0",
